<resources>
    <string name="app_name">GPS</string>
    <!--首页-->
    <string name="search_car_hint">请输入车牌号</string>
    <string name="hint_password">请输入密码</string>
    <string name="home">首页</string>
    <string name="login">登录</string>
    <string name="search_car">寻车</string>
    <string name="message">消息</string>
    <string name="message_list">消息列表</string>
    <string name="user">我的</string>
    <string name="car_manage">车辆管理</string>
    <string name="ck_allCars">所有车辆</string>
    <string name="ck_control">布控车辆</string>
    <string name="ck_defend">设防车辆</string>
    <string name="item_car_defend_carNum">车牌：</string>
    <string name="item_car_defend_speed">时速：</string>
    <string name="item_car_defend_reason">原因：</string>
    <string name="item_car_defend_time">设防时间：</string>
    <string name="item_car_defend_cancel">解除设防</string>
    <string name="item_car_defend_control">车辆布控</string>
    <string name="item_car_control_carNum">车辆号牌：</string>
    <string name="item_car_control_name">车主姓名：</string>
    <string name="item_car_control_cancel">解除布控</string>
    <string name="item_car_control_search">车辆追踪</string>
    <string name="car_defend">车辆设防</string>
    <string name="risk_control">风险控制</string>
    <string name="tab_risk_control_yq">逾期</string>
    <string name="tab_risk_control_cc">拆除</string>
    <string name="tab_risk_control_lx">离线</string>
    <string name="tab_risk_control_mg">敏感</string>
    <string name="type">类型：</string>
    <string name="collect_car">拖车</string>
    <string name="device_install">设备安装</string>
    <!--设备安装页面-->
    <string name="et_input_vin_hint">请输入车架号（必填）</string>
    <string name="et_input_carNum_hint">请输入车牌号（选填）</string>
    <string name="picture_carNum">车牌照片：</string>
    <string name="picture_carBody">车身照片：</string>
    <string name="next">下一步</string>
    <string name="vin">车架号：</string>
    <string name="carNum">车牌号：</string>
    <string name="add_device_hint">请输入设备ID</string>
    <string name="time">时间：</string>
    <string name="status">状态：</string>
    <string name="add_device">添加设备</string>
    <string name="deviceID">设备ID</string>
    <string name="state">状态</string>
    <string name="complete">完成</string>
    <string name="add">添加</string>
    <string name="device_list">设备列表</string>
    <string name="wifi_title">wifi定位</string>
    <string name="location">位置：</string>
    <!--我的-->
    <string name="about_cxt">关于我们</string>
    <string name="common_problem">常见问题</string>
    <string name="advice_response">意见反馈</string>
    <string name="check_update">检测更新</string>
    <string name="setting">设置</string>
    <string name="update_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <!--无数据提示-->
    <string name="notice_no_data">列表暂无车辆</string>
    <string name="notice">暂无数据</string>
    <string name="about_cxt_introduce">关于畅行通:\n\n

    深圳畅行通科技有限公司是专注于物联网平台的运营商。公司总部位于创新之都深圳，依托名校资源，在武汉也建立了研发基地。公司目前提供畅行通北斗GPS云平台，畅行通智慧停车场云平台，为行业及普通用户提供更智能更方便的产品与服务。\n

    畅行通科技拥有OA、CRM、HRM、MAIL、ERP、MIS、等模块化技术，畅行通科技精通嵌入式等硬件核心技术，对GPS、RFID、GPRS、LTE等各种专业领域的无线通讯技术非常精通。\n

    秉承技术领先于用户服务领先的使命，我们非常重视在移动互联网领域的服务，产品跨接Android、IOS、微信服务号。迄今，畅行通有10余项产品获国家版权局计算机软件著作权与产品登记，1项技术获国际专利。\n

    物联网是下一个风口，蕴含的无限的商机，畅行通愿与物联网创业领域的各方团队横向协作，我们相信技术的进步就是要给用户更好的体验，所以我们会一直努力！\n

    \n深圳畅行通科技有限公司\n\n

    公司地址: 深圳市龙岗区南湾街道平吉大道平朗路9号万国城B座15A </string>
    <string name="common_problem_text">Q 畅行通GPS手机服务怎么收费：\n

      \t\tA 畅行通GPS提供的手机服务是不收取用户任何费用的，您可以放心使用。手机由于访问网络 产生的GPRS流量费由运营商收取，大家尽量使用家庭公司或者公共场所的WIFI上网。\n\n

      Q 登录输入GPS帐号与密码\n

      \t\tA 参考公司电脑登录的帐号与密码，登录之后的权限相同。\n\n

      Q 轨迹回放显示的日期不连续\n

      \t\tA 手机版我们做过数据筛选跟优化，只显示出车有数据的日期。\n\n

      Q 地图的实时路况怎么观察\n

      \t\tA 绿色表示畅通，黄色代表行驶缓慢，红色代表行驶拥堵，红黑色代表严重拥堵。</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="cancel">取消</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <!--车辆详情-->
    <string name="car_info">车辆信息</string>
    <string name="car_owner_name">车主姓名：</string>
    <string name="car_owner_phone">车主电话：</string>
    <string name="loan_money_num">贷款金额：</string>
    <string name="loan_money_months">贷款分期：</string>
    <string name="loan_money_repay">每期应还：</string>
    <string name="car_location">车辆位置：</string>
    <string name="alarm_state">报警状态：</string>
    <string name="defend_state">设防状态</string>
    <string name="control_state">布控状态</string>
    <string name="defend">设防</string>
    <string name="control">布控</string>
    <string name="track">轨迹</string>
    <string name="search">追踪</string>
    <!--常驻点列表-->
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="season">季</string>
    <string name="satellite">卫星点</string>
    <string name="base_station">基站点</string>
    <string name="wifi">wifi</string>
    <string name="num">次</string>
    <string name="query">查询</string>
    <string name="select_time">请选择时间段</string>
    <string name="hot_point">热力图</string>
    <string name="cycle">周期：</string>
    <string name="speed">当前速度(km/h)</string>
    <string name="mileage">总里程(km)</string>
    <string name="oil">油耗(升)</string>
    <!--围栏-->
    <string name="my_location">我的位置</string>
    <string name="device_location">设备位置</string>
    <string name="one_key_fence">一键围栏</string>
    <string name="more_menu">更多功能</string>
    <string name="track_back">轨迹回放</string>
    <string name="fence_list">围栏列表</string>
    <string name="new_fence">新增围栏</string>
    <string name="search_navigate">追踪导航</string>

    <string name="hint_address">请输入地址</string>
    <string name="select_fence_radius">选择围栏半径</string>
    <string name="max_radio">500</string>
    <string name="min_meter">0米</string>
    <string name="max_meter">500米</string>
    <string name="fenceName">围栏名称：</string>
    <string name="hint_fenceName">请输入围栏名称</string>
    <string name="fence_condition">触发条件：</string>
    <string name="in">进</string>
    <string name="out">出</string>
    <string name="stop">停</string>
    <string name="save">保存</string>
    <string name="name">名称：</string>
    <string name="address">地址：</string>
    <string name="edit">编辑</string>
    <string name="remove">删除</string>
    <string name="radius">半径(m)：</string>
    <string name="radius_no_m">半径：</string>
    <string name="fence">围栏</string>
    <string name="edit_fence">修改围栏</string>

    <string name="deviceID_">设备ID：</string>
    <string name="locationTime">坐标时间：</string>
    <string name="drive_speed">行驶速度：</string>
    <string name="battery">电池电量：</string>
    <string name="current_location">当前位置：</string>
    <string name="submit">提交</string>
    <string name="submit_ok">确认</string>
    <string name="hint_advice">请输入您的反馈意见！</string>
    <string name="success_advice">意见提交成功</string>
    <string name="input_checkCode">请输入验证码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="confirm_pwd_">确认密码：</string>
    <string name="input_newPwd">请输入新密码</string>
    <string name="new_pwd">新密码：</string>
    <string name="hint_pwd">可包含数字、字母且长度为6到16位</string>
    <string name="old_pwd">旧密码：</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="find_password">找回密码</string>
    <string name="send_code">发送验证码</string>
    <string name="input_message_code">请输入短信验证码</string>
    <string name="hint_confirm">请确认密码，6-13位英文字母或数字</string>
    <string name="hint_new_password">请输入新密码，6-13位英文字母或数字</string>
    <string name="hint_input_carNum_vin">请输入车牌号或车架号</string>
    <string name="hundred_meters">百米寻车</string>
    <string name="add_label">添加标签</string>
    <string name="hint_label">请输入标签号，或扫描标签码</string>
    <string name="label">标签号</string>
    <string name="type1">类型</string>
    <string name="whitelist">白名单</string>
</resources>
