<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_layout_car_num"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <SearchView
                android:layout_marginHorizontal="10dp"
                android:id="@+id/sv_query"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:queryHint="@string/hint_address"
                android:iconifiedByDefault="false"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_bg"/>
            <ListView
                android:id="@+id/lv_list"
                android:background="@color/white"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/ll_save_fence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/view_noborder"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_address"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"/>
        <TextView
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_fence_radius"
            android:textSize="14sp"
            />
        <LinearLayout

            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            >
            <TextView
                android:id="@+id/tv_progress_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_meter"
                android:textSize="12sp"
                />
            <SeekBar

                android:id="@+id/sb_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:max="@string/max_radio"
                android:progress="200"
                android:progressDrawable="@drawable/seek_img"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_meter"
                android:textSize="12sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fenceName"
                android:textSize="14sp"

                />
            <EditText
                android:id="@+id/et_fenceName"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/hint_fenceName"
                android:background="@drawable/view_bg"
                android:textSize="12sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fence_condition"
                android:textSize="14sp"
                />
            <RadioGroup
                android:id="@+id/rg_group"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_in"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/in"
                    />
                <RadioButton
                    android:id="@+id/rb_out"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/out"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/rb_stop"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_save"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:backgroundTint="@color/top_layout"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
