<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
 <include
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     layout="@layout/top_layout_car_num"/>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@drawable/view_bg"
       >
       <TextView
           android:gravity="center"
           android:layout_marginTop="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/select_time"
           android:textColor="@color/black_90"
           />
       <com.cxt.gps.UI.view.DoubleSeekBar
           android:id="@+id/sb_seek"
           android:layout_marginHorizontal="10dp"
           android:layout_marginVertical="10dp"
           android:layout_width="match_parent"
           android:layout_height="30dp" />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginHorizontal="10dp"
           >
           <TextView
               android:layout_width="0dp"
               android:layout_weight="0.5"
               android:layout_height="wrap_content"
               android:text="@string/cycle"
               />
           <TextView
               android:id="@+id/tv_week"
               android:gravity="center"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="30dp"
               android:text="@string/week"
               android:background="@drawable/view_bg"
               android:textColor="@color/top_layout"
               />
           <TextView
               android:id="@+id/tv_month"
               android:layout_marginHorizontal="10dp"
               android:gravity="center"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="30dp"
                android:text="@string/month"
               android:background="@drawable/view_bg"
               android:textColor="@color/top_layout"
               />
           <TextView
               android:id="@+id/tv_season"
               android:gravity="center"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="30dp"
               android:text="@string/season"
               android:background="@drawable/view_bg"
               android:textColor="@color/top_layout"
               />

       </LinearLayout>
       <RadioGroup
           android:id="@+id/rg_group"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginHorizontal="10dp"
           android:layout_marginVertical="5dp"
           >
               <RadioButton
                   android:gravity="center"
                   android:id="@+id/rb_sate"
                   android:layout_alignParentLeft="true"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/satellite"
                   android:checked="true"
                   />
               <RadioButton
                   android:gravity="center"
                   android:id="@+id/rb_base"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:text="@string/base_station"
                   />
               <RadioButton
                   android:gravity="center"
                   android:id="@+id/rb_wifi"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:text="@string/wifi"
                   />

       </RadioGroup>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:gravity="center"
           android:layout_marginBottom="5dp"
           >
           <Button
               android:id="@+id/btn_query"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/query"
               android:textColor="@color/white"
               android:backgroundTint="@color/top_layout"
               />
       </LinearLayout>
   </LinearLayout>
</LinearLayout>
