<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <include
        layout="@layout/layout_top"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="35dp"
       android:layout_marginVertical="10dp"
       android:layout_marginHorizontal="10dp"
       >
       <TextView
           android:id="@+id/tv_week"
           android:background="@drawable/view_noborder"
           android:gravity="center"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:text="@string/week"
           android:textAlignment="center"
           android:textSize="16sp"
           android:textColor="@color/top_layout"
           />
       <TextView
           android:id="@+id/tv_month"
           android:background="@drawable/view_no_left_border"
           android:gravity="center"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:text="@string/month"
           android:textAlignment="center"
           android:textSize="16sp"
           android:textColor="@color/top_layout"
           />
       <TextView
           android:id="@+id/tv_season"
           android:background="@drawable/view_no_left_border"
           android:gravity="center"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:text="@string/season"
           android:textAlignment="center"
           android:textSize="16sp"
           android:textColor="@color/top_layout"
           />
   </LinearLayout>
    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_no_top_border"
        >
        <RadioButton
            android:id="@+id/rb_sate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/satellite"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rb_base"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/base_station" />
        <RadioButton
            android:id="@+id/rb_wifi"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/wifi"
            />
    </RadioGroup>
    <include
        layout="@layout/list_layout"/>
</LinearLayout>
