<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/layout_top"/>

    <EditText
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/et_new"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/view_bg"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:textSize="15dp"
        />
    <EditText
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/et_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/view_bg"
        android:hint="@string/hint_confirm"
        android:inputType="textPassword"
        android:textSize="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        >

        <EditText
            android:id="@+id/et_code"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/view_bg"
            android:hint="@string/input_message_code"
            android:paddingLeft="10dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_red"
            android:layout_marginHorizontal="20dp"
            android:text="@string/send_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:background="@color/top_layout"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>
