<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/ll_more"
    >
    <TextView
        android:id="@+id/tv_track_back"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_back"
        android:textSize="16sp"
        android:textColor="@color/black_90"
        />
    <TextView
        android:layout_marginHorizontal="15dp"
        android:id="@+id/tv_fence_list"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fence_list"
        android:textSize="16sp"
        android:textColor="@color/black_90"
        />
    <TextView
        android:layout_marginHorizontal="15dp"
        android:id="@+id/tv_new_fence"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_fence"
        android:textSize="16sp"
        android:textColor="@color/black_90"
        />
    <TextView
        android:layout_marginHorizontal="15dp"
        android:id="@+id/tv_search_navigate"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_navigate"
        android:textSize="16sp"
        android:textColor="@color/black_90"
        />
</LinearLayout>
