<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_layout_car_num"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        >
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp"
                />
            <EditText
                android:id="@+id/et_fenceName"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:background="@drawable/view_bg"
                android:layout_height="35dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/radius_no_m"
                android:textSize="15sp"
                />
            <EditText
                android:id="@+id/et_radius"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:background="@drawable/view_bg"
                android:layout_height="35dp"
                android:inputType="number"
                />
        </LinearLayout>


    </LinearLayout>
    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <RadioButton
            android:id="@+id/rb_in"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            />
        <RadioButton
            android:id="@+id/rb_out"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            />
        <RadioButton
            android:id="@+id/rb_stop"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            />
    </RadioGroup>
   <Button
       android:id="@+id/btn_save"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/save"
       android:layout_marginBottom="10dp"
       android:layout_marginHorizontal="10dp"
       android:textColor="@color/white"
       android:backgroundTint="@color/top_layout"
       />
</LinearLayout>
